--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "starting a new game",
   "main": "./src/app.js",
   "scripts": {
-    "webpack": "webpack",
+    "webpack": "webpack --watch",
     "build": "webpack --config prod.config.js",
     "start": "http-server -p 8080 -o http://localhost:8080/index.html"
   },
@@ -27,6 +27,7 @@
     "pixi.js": "^5.2.0",
     "popper.js": "^1.16.1",
     "unminified-webpack-plugin": "^2.0.0",
+    "url-loader": "^4.1.1",
     "yarn": "^1.10.1"
   },
   "devDependencies": {
@@ -36,11 +37,12 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
     "css-loader": "^5.0.1",
+    "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.1",
-    "node-sass": "^5.0.0",
+    "node-sass": "^4.14.1",
     "npm": "^6.1.0",
     "sass": "^1.29.0",
-    "sass-loader": "^10.1.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^2.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.44.2",
